--- a/app-layout/app-layout.css
+++ b/app-layout/app-layout.css
@@ -1,61 +1,38 @@
 html,
 body {
     overflow-x: hidden;
-}
-
-html,
-body {
     min-height: 100%;
     display: flex;
     flex-grow: 1;
     margin: 0;
     background: #EEEEEE;
+    color: white;
 }
 
-x-grow, [x-grow] {
+x-grow,
+[x-grow] {
     flex-grow: 1;
 }
 
+.center, main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
 
 /*  Views Layout */
 
 main {
     background: var(--primary-background);
     flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     position: relative;
-    height: 100%;
 }
 
 main>* {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: white;
     position: absolute;
-
-    /* Transitions */
-    transition: transform 500ms, opacity 300ms;
-    will-change: transform, opacity;
-    transform-origin: center;
 }
 
-[x-responsive] {
-    padding: 24px 16px;
-    box-sizing: border-box;
-}
-
-@media (min-width: 420px) {
-    [x-responsive] {
-        padding: 88px;
-        width: 100%;
-        max-width: 800px;
-        max-height: 600px;
-    }
-}
