--- a/app-layout/app-layout.css
+++ b/app-layout/app-layout.css
@@ -14,7 +14,8 @@ x-grow,
     flex-grow: 1;
 }
 
-.center, main {
+.center,
+main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,6 +24,15 @@ x-grow,
     width: 100%;
     height: 100%;
 }
+
+.fit {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
 
 /*  Views Layout */
 
@@ -35,4 +45,3 @@ main {
 main>* {
     position: absolute;
 }
-
