move animations to animations.css
Former-commit-id: 20c1dc6f05f25cd11b2e2fae2bda6bf4f3ba7701

--- a/x-pinpad/x-pinpad.css
+++ b/x-pinpad/x-pinpad.css
@@ -65,7 +65,7 @@ x-delete {
 
 /* Wrong Attempt Animation */
 
-.shake x-pin-label{
+.shake-pinpad x-pin-label{
     animation: shake-pinpad 500ms;
 }
 
