--- a/view-identicons/view-identicons.css
+++ b/view-identicons/view-identicons.css
@@ -9,7 +9,6 @@ view-identicons x-header {
     z-index: 2;
 }
 
-
 view-identicons x-identicon {
     width: 128px;
     height: 128px;
@@ -17,6 +16,7 @@ view-identicons x-identicon {
     transition: transform 500ms;
     will-change: transform;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    transform: scale(0.6);
 }
 
 view-identicons x-container {
@@ -26,7 +26,9 @@ view-identicons x-container {
     align-items: center;
 }
 
-view-identicons x-identicon:nth-child(1) {}
+view-identicons x-identicon:nth-child(1) {
+    transform: translate(0, 0);
+}
 
 view-identicons x-identicon:nth-child(2) {
     transform: translate(0, -128px);
@@ -55,22 +57,19 @@ view-identicons x-identicon:nth-child(7) {
 
 view-identicons [button] {
     opacity: 0;
-    transform: translate(0, 480px);
+    /* transform: translate(0, 480px); */
     transition: transform 500ms;
     will-change: transform;
     transition-delay: 300ms;
     position: absolute;
     bottom: 40px;
+    pointer-events: none;
 }
 
 
 view-identicons x-backdrop {
     content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    position: fixed;
     background: rgba(0, 0, 0, 0.8);
     z-index: 1;
     pointer-events: none;
@@ -83,7 +82,8 @@ view-identicons x-backdrop {
 view-identicons [secondary] {
     position: absolute;
     bottom: 40px;
-    margin-bottom:  20px;
+    margin-bottom: 20px;
+    cursor: pointer;
 }
 
 
@@ -92,6 +92,7 @@ view-identicons x-address:before {
     content: 'Avatar Address';
     line-height: 24px;
     font-weight: 700;
+    font-size: 13px;
 }
 
 view-identicons x-address {
@@ -105,17 +106,20 @@ view-identicons[selected] [button] {
     opacity: 1;
     z-index: 2;
     transform: translate(0, 0);
+    pointer-events: all;
 }
 
 view-identicons[selected] x-address {
     opacity: 1;
     z-index: 2;
     transform: translate(0, 56px);
+    margin-top: 16px;
 }
 
 view-identicons[selected] x-backdrop {
     pointer-events: all;
-    opacity: 0.9;
+    opacity: 1;
+    border: 100vmax solid rgb(21, 20, 51);
 }
 
 view-identicons x-identicon[selected] {
@@ -170,6 +174,6 @@ view-identicons x-identicon:nth-child(7) {
     transition-delay: 300ms;
 }
 
-view-identicons x-identicon[selected]{
+view-identicons x-identicon[selected] {
     transition-delay: 0s !important;
 }
