--- a/x-slides/x-slides.css
+++ b/x-slides/x-slides.css
@@ -18,14 +18,14 @@ x-slide-container > * {     /* slides are the children of x-slide-container */
     min-height: 320px;
     flex: 1;
     width: 100%;
-    max-width: 400px;
+    max-width: 368px;
     opacity: 0;
     margin-right: 8px;
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
     transform: scale(0.9);
     will-change: opacity, transform;
     user-select: none;
-    padding: 16px 0;
+    padding-bottom: 16px;
 }
 
 x-slide-container > .active {
