--- a/x-view/x-view.css
+++ b/x-view/x-view.css
@@ -15,7 +15,7 @@
 
 @media (min-width: 420px) {
     .x-view {
-        padding: 32px 88px;
+        padding: 32px 88px 48px;
         width: 100%;
         max-width: 800px;
         max-height: 672px;
