Refactor elements to use es6 modules
Former-commit-id: 1f1ac68073c86ef1cda7efc0dba296e11e5b1143

--- a/view-loading/view-loading.css
+++ b/view-loading/view-loading.css
@@ -1,3 +1,5 @@
+@import '../nimiq-style/nimiq-style.css';
+
 .state-loading view-loading {
     opacity: 1;
     background: var(--primary-background);
