--- a/x-mnemonic-phrase/x-mnemonic-phrase.css
+++ b/x-mnemonic-phrase/x-mnemonic-phrase.css
@@ -1,3 +1,6 @@
+@import '../nimiq-style/nimiq-style.css';
+@import 'x-recovery-phrase.css';
+
 x-mnemonic-phrase {
     text-align: center;
     display: flex;
