--- a/nimiq-style/typography.css
+++ b/nimiq-style/typography.css
@@ -1,3 +1,11 @@
+html {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+}
+
+@import '../fast-font/fast-font.css';
 body {
     font-size: 15px;
 }
