--- a/x-success-mark/x-success-mark.css
+++ b/x-success-mark/x-success-mark.css
@@ -25,15 +25,15 @@
     stroke-dashoffset: 48;
 }
 
-.animate > .checkmark {
+.animate-success-mark > .checkmark {
     animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
 }
 
-.animate > .checkmark > .checkmark__circle {
+.animate-success-mark > .checkmark > .checkmark__circle {
     animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
 
-.animate > .checkmark > .checkmark__check {
+.animate-success-mark > .checkmark > .checkmark__check {
     animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
 }
 
