Use es6 and css imports, cleanup
Former-commit-id: a57e4947ffa5cd4a20d7de408debf2d5238c8085

--- a/view-backup-file/view-backup-file.css
+++ b/view-backup-file/view-backup-file.css
@@ -1,7 +1,8 @@
-@import '../nimiq-style/nimiq-style.css';
+@import '/libraries/nimiq-style/nimiq-style.css';
 @import '../x-slides/x-slides.css';
 @import '../x-pinpad/x-pinpad.css';
 @import '../x-wallet-backup/x-wallet-backup.css';
+@import '../x-loading-animation/x-loading-animation.css';
 
 
 view-backup-file [button]{
