--- a/view-backup-phrase-validate/view-backup-phrase-validate.css
+++ b/view-backup-phrase-validate/view-backup-phrase-validate.css
@@ -1,2 +1,2 @@
-@import '../nimiq-style/nimiq-style.css';
+@import '/libraries/nimiq-style/nimiq-style.css';
 @import '../x-mnemonic-validate/x-mnemonic-validate.css';
