--- a/view-identicons/view-identicons.css
+++ b/view-identicons/view-identicons.css
@@ -1,4 +1,4 @@
-@import '../nimiq-style/nimiq-style.css';
+@import '/libraries/nimiq-style/nimiq-style.css';
 
 view-identicons {
     box-sizing: border-box;
