--- a/view-backup-file-import/view-backup-file-import.css
+++ b/view-backup-file-import/view-backup-file-import.css
@@ -1,4 +1,4 @@
-@import '../nimiq-style/nimiq-style.css';
+@import '/libraries/nimiq-style/nimiq-style.css';
 @import '../x-slides/x-slides.css';
 @import '../x-pinpad/x-pinpad.css';
-@import '../libraries/wallet-backup/wallet-backup.css';
+@import '../x-wallet-backup-import/x-wallet-backup-import.css';
