Complete use of es6 and css imports
Former-commit-id: b147b0dd94d57d52fe076af128f4229f6f57ef5d

--- a/nimiq-logo/nimiq-logo.css
+++ b/nimiq-logo/nimiq-logo.css
@@ -1,4 +1,4 @@
-@import '../fast-font/fast-font.css';
+@import '/library/nimiq-style/typography.css';
 nimiq-logo {
     width: 264px;
     height: 30px;
