--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -1,3 +1,7 @@
+@import '/library/nimiq-style/nimiq-style.css';
+@import '../x-success-mark/x-success-mark.css';
+@import '../x-slides/x-slides.css';
+
 x-mnemonic-validate {
     width: 100%;
     color: white;
@@ -6,6 +10,7 @@ x-mnemonic-validate {
     flex-wrap: wrap;
     font-size: 15px;
     line-height: 32px;
+    max-width: 368px;
 }
 
 x-mnemonic-validate p{
