Align views correctly, cleanup

--- a/view-backup-file/view-backup-file.css
+++ b/view-backup-file/view-backup-file.css
@@ -2,6 +2,7 @@
 @import '../x-slides/x-slides.css';
 @import '../x-wallet-backup/x-wallet-backup.css';
 @import '../x-loading-animation/x-loading-animation.css';
+@import '../x-success-mark/x-success-mark.css';
 
 
 view-backup-file [button]{
