--- a/view-identicons/view-identicons.css
+++ b/view-identicons/view-identicons.css
@@ -71,7 +71,7 @@ view-identicons [button] {
 
 view-identicons x-backdrop {
     content: '';
-    position: fixed;
+    position: absolute;
     background: rgba(0, 0, 0, 0.8);
     z-index: 1;
     pointer-events: none;
