--- a/x-wallet-backup/x-wallet-backup.css
+++ b/x-wallet-backup/x-wallet-backup.css
@@ -5,6 +5,7 @@ x-wallet-backup{
 	position:  relative;
 	display: block;
 	text-align: center;
+	flex-grow:  1;
 }
 
 x-wallet-backup img {
@@ -12,6 +13,7 @@ x-wallet-backup img {
 	border-radius: 12px;
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 	transition: transform 300ms;
+	flex-grow:  1;
 }
 
 x-wallet-backup:hover img{
