--- a/x-success-mark/x-success-mark.css
+++ b/x-success-mark/x-success-mark.css
@@ -26,25 +26,25 @@
 }
 
 .animate-success-mark > .checkmark {
-    animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+    animation: x-success-markfill .4s ease-in-out .4s forwards, x-success-mark-scale .3s ease-in-out .9s both;
 }
 
 .animate-success-mark > .checkmark > .checkmark__circle {
-    animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+    animation: x-animation-stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
 
 .animate-success-mark > .checkmark > .checkmark__check {
-    animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+    animation: x-animation-stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
 }
 
-@keyframes stroke {
+@keyframes x-animation-stroke {
     100% { stroke-dashoffset: 0; }
 }
-@keyframes scale {
+@keyframes x-success-mark-scale {
     0%, 100% { transform: none; }
     50% { transform: scale3d(1.1, 1.1, 1); }
 }
-@keyframes fill {
+@keyframes x-success-markfill {
     100% { box-shadow: inset 0px 0px 0px 30px var(--success-color); }
 }
 
