--- a/x-address/x-address.css
+++ b/x-address/x-address.css
@@ -2,20 +2,26 @@
 @import '../x-toast/x-toast.css';
 
 x-address {
-    min-width: 340px;
     width: 100%;
+    min-width: 320px;
+    max-width: 400px;
+    box-sizing: border-box;
+    padding: 8px 16px;
     font-size: 13px;
     font-weight: 800;
-    -webkit-user-select: text;
-    user-select: all;
     white-space: nowrap;
-    max-width: 400px;
     cursor: pointer;
+    border-radius: 3px;
+}
+
+x-address:hover{
+    background: rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 375px) {
     x-address {
         font-size: 12px;
+        padding: 8px 4px;
     }
 }
 
