--- a/x-slides/x-slides.css
+++ b/x-slides/x-slides.css
@@ -6,7 +6,7 @@ x-slides {
     overflow-x: hidden;
     flex-grow: 1;
     display: flex;
-    flex-direction:  column;
+    flex-direction: column;
 }
 
 x-slide-container {
@@ -19,12 +19,19 @@ x-slide-container.animate {
     transition: transform 0.8s ease-in-out;
 }
 
-x-slide-container > * {     /* slides are the children of x-slide-container */
+x-slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+x-slide-container>* {
+    /* slides are the children of x-slide-container */
     box-sizing: border-box;
     min-height: 320px;
     flex: 1;
     width: 100%;
-    /* max-width: 368px; */
     opacity: 0;
     margin-right: 8px;
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
@@ -34,7 +41,7 @@ x-slide-container > * {     /* slides are the children of x-slide-container */
     padding-bottom: 16px;
 }
 
-x-slide-container > .active {
+x-slide-container>.active {
     opacity: 1;
     transform: scale(1);
 }
@@ -46,7 +53,8 @@ x-indicator {
     display: flex;
     justify-content: center;
     box-sizing: border-box;
-    padding: 16px 16px 0;
+    padding: 8px 16px 0;
+    min-height: 16px;
 }
 
 x-indicator x-dot {
@@ -64,9 +72,3 @@ x-indicator x-dot[on] {
     background: white;
 }
 
-x-slide {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
