Simplify x-slides, fix view-phrase-input, cleanup

--- a/x-mnemonic-validate/x-mnemonic-validate.css
+++ b/x-mnemonic-validate/x-mnemonic-validate.css
@@ -10,6 +10,7 @@ x-mnemonic-validate {
     flex-wrap: wrap;
     font-size: 15px;
     line-height: 32px;
+    flex-grow: 1;
 }
 
 x-mnemonic-validate p{
