--- a/x-slides/x-slides.css
+++ b/x-slides/x-slides.css
@@ -7,6 +7,7 @@ x-slides {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 x-slide-container {
@@ -15,7 +16,7 @@ x-slide-container {
     flex-grow: 1;
 }
 
-x-slide-container.animate {
+x-slide-container.x-animate-slide {
     transition: transform 0.8s ease-in-out;
 }
 
@@ -32,8 +33,8 @@ x-slide-container>* {
     min-height: 320px;
     flex: 1;
     width: 100%;
+    /* max-width: 100vw; */
     opacity: 0;
-    margin-right: 8px;
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
     transform: scale(0.9);
     will-change: opacity, transform;
