--- a/view-identicons/view-identicons.css
+++ b/view-identicons/view-identicons.css
@@ -1,4 +1,5 @@
 @import '/library/nimiq-style/nimiq-style.css';
+@import '../x-address/x-address.css';
 
 view-identicons {
     box-sizing: border-box;
@@ -26,6 +27,7 @@ view-identicons x-container {
     flex-grow: 1;
     justify-content: center;
     align-items: center;
+    margin-bottom:  64px;
 }
 
 view-identicons x-identicon:nth-child(1) {
@@ -64,8 +66,9 @@ view-identicons [button] {
     will-change: transform;
     transition-delay: 300ms;
     position: absolute;
-    top: calc( 50% + 256px);
+    top: calc( 50% + 240px);
     pointer-events: none;
+    max-width: calc(100% - 32px);
 }
 
 
