Fix view-identicons on desktop

--- a/view-identicons/view-identicons.css
+++ b/view-identicons/view-identicons.css
@@ -68,7 +68,7 @@ view-identicons [button] {
     position: absolute;
     top: calc( 50% + 240px);
     pointer-events: none;
-    max-width: calc(100% - 32px);
+    width: calc(100% - 32px);
 }
 
 
