--- a/view-backup-file-import/view-backup-file-import.css
+++ b/view-backup-file-import/view-backup-file-import.css
@@ -3,3 +3,4 @@
 @import '../x-success-mark/x-success-mark.css';
 @import '../x-wallet-backup-import/x-wallet-backup-import.css';
 @import '../x-loading-animation/x-loading-animation.css';
+@import '../x-password-input/x-password-input.css';
