--- a/view-backup-file/view-backup-file.css
+++ b/view-backup-file/view-backup-file.css
@@ -3,6 +3,7 @@
 @import '../x-wallet-backup/x-wallet-backup.css';
 @import '../x-loading-animation/x-loading-animation.css';
 @import '../x-success-mark/x-success-mark.css';
+@import '../x-password-input/x-password-input.css';
 
 
 view-backup-file [button]{
