--- a/x-wallet-backup/x-wallet-backup.css
+++ b/x-wallet-backup/x-wallet-backup.css
@@ -1,14 +1,14 @@
 @import "/library/nimiq-style/nimiq-style.css";
 
 x-wallet-backup{
-	height: 70%;
+	width: 64%;
 	position:  relative;
 	display: block;
 	text-align: center;
 }
 
 x-wallet-backup img {
-	height: 100%;
+	width: 100%;
 	border-radius: 12px;
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 	transition: transform 300ms;
