--- a/x-address/x-address.css
+++ b/x-address/x-address.css
@@ -1,7 +1,7 @@
 @import '/library/nimiq-style/nimiq-style.css';
 @import '../x-toast/x-toast.css';
 
-x-address {
+.x-address{
     width: 100%;
     min-width: 320px;
     max-width: 400px;
@@ -10,23 +10,26 @@ x-address {
     font-size: 13px;
     font-weight: 800;
     white-space: nowrap;
-    cursor: pointer;
-    border-radius: 3px;
-}
-
-x-address:hover{
-    background: rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 375px) {
-    x-address {
+    .x-address {
         font-size: 12px;
         padding: 8px 4px;
     }
 }
 
 @media (max-width: 340px) {
-    x-address {
+    .x-address {
         font-size: 11px;
     }
+}
+
+x-address {
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+x-address:hover{
+    background: rgba(0, 0, 0, 0.2);
 }
