Border-bottom should have error color during shake

--- a/x-input/x-input.css
+++ b/x-input/x-input.css
@@ -3,3 +3,9 @@
 .x-input{
 	width: 100%;
 }
+
+.x-input.shake input,
+.x-input.shake input,
+.x-input.shake input{
+    border-bottom: 1px solid var(--error-color);
+}
