--- a/x-amount-input/x-amount-input.css
+++ b/x-amount-input/x-amount-input.css
@@ -1,8 +1,9 @@
 @import '../x-input/x-input.css';
 @import '../x-amount/x-amount.css';
+@import '../x-numpad/x-numpad.css';
 
 
-x-amount-input x-currency-1:after {
+x-amount-input input:after {
     position: absolute;
     right: -32px;
     bottom: 6px;
@@ -10,9 +11,19 @@ x-amount-input x-currency-1:after {
     padding: 0;
 }
 
-
-/* Disabled State */
+@media (min-width: 420px) {
+    x-amount-input x-numpad {
+        display: none;
+    }
+}
 
 x-amount-input input[disabled] {
     opacity: 1;
+}
+
+x-amount-input form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
 }
