--- a/x-address-scanner/x-address-scanner-fallback-page.css
+++ b/x-address-scanner/x-address-scanner-fallback-page.css
@@ -18,3 +18,16 @@ x-address-scanner-fallback-page .relative {
     position: relative;
     width: 100%;
 }
+
+x-address-scanner-fallback-page.x-address-scanner-base-page [fallback-input] {
+    font-size: 20px;
+    line-height: 40px;
+    border-bottom: 1px solid white;
+    padding-left: 48px;
+}
+
+x-address-scanner-fallback-page.x-address-scanner-base-page [icon-paste] {
+    width: 40px;
+    height: 40px;
+    background-size: 32px;
+}
