--- a/x-toast/x-toast.css
+++ b/x-toast/x-toast.css
@@ -10,7 +10,7 @@ x-toast-container {
     transform: translateY(-110%);
 }
 
-x-toast-popup {
+x-toast {
     min-height: 20px;
     padding: 14px 24px;
     background: #333;
@@ -48,7 +48,7 @@ x-toast-popup {
 }
 
 @media (max-width: 420px) {
-    x-toast-popup {
+    x-toast {
         margin: 0px;
         width: 100%;
         border-radius: 0;
