--- a/x-address-scanner/x-address-scanner.css
+++ b/x-address-scanner/x-address-scanner.css
@@ -1,11 +1,27 @@
-@import "/library/nimiq-style/nimiq-style.css";
-@import "../x-pages/x-pages.css";
-@import "x-address-scanner-intro-page.css";
-@import "x-address-scanner-scanner-page.css";
-@import "x-address-scanner-fallback-page.css";
+@import '../x-qr-scanner/x-qr-scanner.css';
 
-x-address-scanner,
-x-address-scanner > x-pages {
+x-address-scanner x-qr-scanner-overlay {
+    transform: translateZ(0); /* to avoid rendering issues on iPhone */
+}
+
+x-address-scanner x-qr-scanner-overlay:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="400" width="400"><path d="M0 0v400h400V0zm171.3 134.5h57.5a15.7 15.7 0 0 1 13.5 7.9l28.8 49.8a15.7 15.7 0 0 1 0 15.6l-28.8 49.8a15.7 15.7 0 0 1-13.6 7.9h-57.5a15.7 15.7 0 0 1-13.5-7.9l-28.8-49.8a15.7 15.7 0 0 1 0-15.6l28.8-49.8a15.7 15.7 0 0 1 13.6-7.9z" opacity=".5"/></svg>');
+    background-size: cover;
+    animation: qr-scanner-animation 400ms infinite alternate ease-in-out;
+    will-change: transform;
+}
+
+@keyframes qr-scanner-animation {
+    from {
+        transform: scale(1.1);
+    }
+    to {
+        transform: scale(1.01);
+    }
 }
