Delete last dependency on x-address-page.js

--- a/x-address-pages/x-address-pages.css
+++ b/x-address-pages/x-address-pages.css
@@ -11,7 +11,7 @@ x-address-pages > x-pages {
     height: 100%;
 }
 
-.x-address-page {
+x-address-pages > x-pages > * {
     display: flex;
     flex-direction: column;
     align-items: center;
