--- a/x-downloadable-image/x-downloadable-image.css
+++ b/x-downloadable-image/x-downloadable-image.css
@@ -9,6 +9,7 @@ x-downloadable-image a {
     display: block;
     width: 100%;
     height: 100%;
+    -webkit-tap-highlight-color: transparent;
 }
 
 x-downloadable-image img {
@@ -23,13 +24,13 @@ x-downloadable-image [long-touch-indicator] {
     left: calc(50% - 64px);
     top: calc(50% - 64px);
     pointer-events: none;
-    transition: opacity .2s;
+    transition: opacity .3s;
     opacity: 0;
     display: none;
 }
 
 [long-touch-indicator].animate {
-    animation: long-touch-indicator-animation .75s linear forwards;
+    animation: long-touch-indicator-animation .7s linear forwards;
 }
 
 @keyframes long-touch-indicator-animation {
