x-wallet-backup: use x-downloadable-image

--- a/x-wallet-backup/x-wallet-backup.css
+++ b/x-wallet-backup/x-wallet-backup.css
@@ -1,4 +1,5 @@
 @import "/library/nimiq-style/nimiq-style.css";
+@import "../x-downloadable-image/x-downloadable-image.css";
 
 x-wallet-backup{
 	width: 64%;
@@ -7,15 +8,16 @@ x-wallet-backup{
 	text-align: center;
 }
 
-x-wallet-backup img {
+x-wallet-backup x-downloadable-image {
 	width: 100%;
 	max-width:  260px;
 	border-radius: 12px;
+	overflow: hidden;
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 	transition: transform 300ms;
 	/*flex-grow:  1;*/
 }
 
-x-wallet-backup:hover img{
+x-wallet-backup:hover x-downloadable-image {
 	transform:scale(1.02);
 }
